subversion 1.8 does not support meld anymore

--- a/tasks/subversion.yml
+++ b/tasks/subversion.yml
@@ -61,10 +61,11 @@
   with_items:  
    - xxdiff
 #   - xxdiff-scripts
+#  - kdiff3
    - meld
    
 - name: Copy the subversion configuration merge script
-  template: src={{ subversion_merge_tool_cmd }}.j2 dest={{ subversion_merge_tool_cmd_directory }}/{{ subversion_merge_tool_cmd }} mode=0644
+  template: src={{ subversion_merge_tool_file }}.j2 dest={{ subversion_merge_tool_cmd }} mode=0644
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'    
   tags: configure
 
