--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,9 +22,10 @@ subversion_ubuntu: '{{ subversion_version }}-1ubuntu3.1'
 subversion_config_dir : '.subversion'
 #use meld or xxdiff-subversion or xx-diff-proxy 
 subversion_diff_cmd: meld
-subversion_diff3_cmd: meld
-subversion_merge_tool_cmd_directory: ~/.subversion
-subversion_merge_tool_cmd: svn-merge-meld.sh
+subversion_merge_tool_cmd_directory: /usr/bin/
+subversion_merge_tool_file : svn-merge-meld.sh
+subversion_diff3_cmd: "{{ subversion_merge_tool_cmd_directory }}/{{ subversion_merge_tool_file }}"
+subversion_merge_tool_cmd: "{{ subversion_diff3_cmd }}"
 #subversion_merge_tool_cmd: svn-merge-meld.py
 
 subversion_rabbitvcs_enabled: yes                       # Enable module
