--- a/subversion.yml
+++ b/subversion.yml
@@ -3,3 +3,14 @@
   sudo: True
   roles:
     - ansible-subversion
+    
+  vars:
+      subversion_previous_enabled: true   
+      subversion_previous_codename: precise
+      subversion_rabbitvcs_enabled: no
+      subversion_major    : '1'
+      subversion_minor    : '6'
+      subversion_revision : '17'
+      subversion_version : "{{subversion_major}}.{{subversion_minor}}.{{subversion_revision}}"
+      subversion_ubuntu: '{{ subversion_version }}dfsg-3ubuntu3'
+      
