--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,13 +19,18 @@ subversion_revision : '8'
 subversion_version : "{{subversion_major}}.{{subversion_minor}}.{{subversion_revision}}"
 subversion_ubuntu: '{{ subversion_version }}-1ubuntu3.1'
 
-subversion_config_dir : '~/.subversion'
+user                                     : 'albandri' #please override me
+subversion_owner                         : "{{ user }}"
+subversion_group                         : "{{ subversion_owner }}"
+home                                     : '~' #please override me
+subversion_owner_home                    : "{{ home }}"
+subversion_config_dir                    : "{[ subversion_owner_home }}/.subversion"
 #use meld or xxdiff-subversion or xx-diff-proxy 
-subversion_diff_cmd: meld
-subversion_merge_tool_cmd_directory: /usr/bin/
-subversion_merge_tool_file : svn-merge-meld.sh
-subversion_diff3_cmd: "{{ subversion_merge_tool_cmd_directory }}/{{ subversion_merge_tool_file }}"
-subversion_merge_tool_cmd: "{{ subversion_diff3_cmd }}"
-#subversion_merge_tool_cmd: svn-merge-meld.py
+subversion_diff_cmd                      : meld
+subversion_merge_tool_cmd_directory      : /usr/bin/
+subversion_merge_tool_file               : "svn-merge-meld.sh"
+subversion_diff3_cmd                     : "{{ subversion_merge_tool_cmd_directory }}/{{ subversion_merge_tool_file }}"
+subversion_merge_tool_cmd                : "{{ subversion_diff3_cmd }}"
+#subversion_merge_tool_cmd               : svn-merge-meld.py
 
-subversion_rabbitvcs_enabled: yes                       # Enable module
+subversion_rabbitvcs_enabled             : yes                       # Enable module
