--- a/subversion.yml
+++ b/subversion.yml
@@ -7,6 +7,7 @@
   vars:
       user: root
       home: /root
+      subversion_owner_home: "/root/.subversion"
       subversion_previous_enabled: true   
       subversion_previous_codename: precise
       subversion_rabbitvcs_enabled: no
