--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,11 @@
 ---
+dependencies: []
 
 galaxy_info:
   author: Alban Andrieu
   description: A role for installing subversion
   company: Nabla
-  license: MIT
+  license: GPLv3
   min_ansible_version: 1.6.3
   platforms:
   - name: Ubuntu
@@ -21,5 +22,26 @@ galaxy_info:
     - trusty
   categories:
   - development
-dependencies: []
 
+ansigenome_info:
+  galaxy_id: '1511'
+
+  travis: True
+
+  authors:
+    - name:  'Alban Andrieu'
+      url: 'fr.linkedin.com/in/nabla/'
+      email: 'alban.andrieu@free.fr'
+      twitter: 'AlbanAndrieu'
+      github: 'AlbanAndrieu'
+      
+  synopsis: |
+    Ensures that subversion is installed (using `apt`)
+
+  usage: |
+    Run the following command :
+    
+    `ansible-playbook -i hosts -c local -v subversion.yml -vvvv --ask-sudo-pass | tee setup.log`
+
+  #custom: |
+  #  Any custom output you want after the usage section..
