--- a/tasks/subversion.yml
+++ b/tasks/subversion.yml
@@ -59,7 +59,7 @@
 - name: Install diff tools
   apt: pkg={{ item }} state=present update_cache=yes
   sudo : yes  
-  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
+  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_diff_enabled
   tags: package
   with_items:
    - xxdiff
@@ -69,7 +69,7 @@
 
 - name: Copy the subversion configuration merge script
   template: src={{ subversion_merge_tool_file }}.j2 dest={{ subversion_merge_tool_cmd }} mode=0755
-  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
+  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_diff_enabled
   tags: configure
 
 - name: Create base directory
@@ -83,7 +83,7 @@
 
 - name: Copy the subversion configuration script
   template: src=config.j2 dest={{ subversion_config_dir }}/config mode=0644
-  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
+  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_diff_enabled
   tags: configure
 
 - name: Install rabbitvcs tools
