--- a/tasks/subversion.yml
+++ b/tasks/subversion.yml
@@ -7,7 +7,7 @@
     state=absent
     purge=yes
     force=yes
-  sudo : yes    
+  sudo : yes
   with_items:
     - libsvn1
     - subversion
@@ -16,7 +16,7 @@
   action: shell echo a$(cat /etc/apt/sources.list | grep $(echo   'http://extras.ubuntu.com/ubuntu' | tr "[:upper:]" "[:lower:]"  ))
   register: sources_subversion1
   ignore_errors: true
-  sudo : yes  
+  sudo : yes
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_previous_enabled
 
 - debug: msg="sources_subversion1 value is {{ sources_subversion1.stdout }} "
@@ -24,14 +24,14 @@
 
 - name: Adding source.
   action: shell echo "deb http://extras.ubuntu.com/ubuntu {{ subversion_previous_codename }} main" | tr "[:upper:]" "[:lower:]" >> /etc/apt/sources.list
-  sudo : yes  
+  sudo : yes
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and sources_subversion1.stdout == 'a' and subversion_previous_enabled
 
 - name: Checking if Sources are Available
   action: shell echo a$(cat /etc/apt/sources.list | grep $(echo   'http://us.archive.ubuntu.com/ubuntu/' | tr "[:upper:]" "[:lower:]"  ))
   register: sources_subversion2
   ignore_errors: true
-  sudo : yes  
+  sudo : yes
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_previous_enabled
 
 - debug: msg="sources_subversion2 value is {{ sources_subversion2.stdout }} "
@@ -39,17 +39,17 @@
 
 - name: Adding source.
   action: shell echo "deb http://us.archive.ubuntu.com/ubuntu/ {{ subversion_previous_codename }} main universe restricted multiverse" | tr "[:upper:]" "[:lower:]" >> /etc/apt/sources.list
-  sudo : yes  
+  sudo : yes
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and sources_subversion2.stdout == 'a' and subversion_previous_enabled
 
 - name: Install subversion package
-  action: apt pkg='libsvn1={{subversion_ubuntu}}' state=installed
-  sudo : yes  
+  action: apt pkg='libsvn1={{subversion_ubuntu}}' state=installed update_cache=yes
+  sudo : yes
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
 
 - name: Install subversion package
   action: apt pkg='subversion={{subversion_ubuntu}}' state=installed
-  sudo : yes  
+  sudo : yes
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
 
 - name: Install subversion package
@@ -58,7 +58,7 @@
 
 - name: Install diff tools
   apt: pkg={{ item }} state=present update_cache=yes
-  sudo : yes  
+  sudo : yes
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_diff_enabled
   tags: package
   with_items:
@@ -81,7 +81,7 @@
 #  ignore_errors: true
   tags: configure
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_diff_enabled
-  
+
 - name: Copy the subversion configuration script
   template: src=config.j2 dest={{ subversion_config_dir }}/config mode=0644
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_diff_enabled
@@ -89,7 +89,7 @@
 
 - name: Install rabbitvcs tools
   apt: pkg={{ item }} state=present update_cache=yes
-  sudo : yes  
+  sudo : yes
   when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') and subversion_rabbitvcs_enabled
   tags: package
   with_items:
