--- a/subversion.yml
+++ b/subversion.yml
@@ -2,18 +2,17 @@
 - hosts: all
   sudo: true
   roles:
-    - role: ./  
-    
+    - role: ./
+
   vars:
       user: root
       home: /root
       subversion_owner_home: "/root/.subversion"
-      subversion_previous_enabled: true   
+      subversion_previous_enabled: true
       subversion_previous_codename: precise
       subversion_rabbitvcs_enabled: no
       subversion_major    : '1'
-      subversion_minor    : '6'
-      subversion_revision : '17'
+      subversion_minor    : '8'
+      subversion_revision : '8'
       subversion_version : "{{subversion_major}}.{{subversion_minor}}.{{subversion_revision}}"
-      subversion_ubuntu: '{{ subversion_version }}dfsg-3ubuntu3'
-      
+      subversion_ubuntu: '{{ subversion_version }}-1ubuntu3.2'
