--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,54 @@
 ---
 language: python
-python: "2.7"
+python:
+  - 2.7
+#  - 3.3
+#  - 3.4
+#  - 3.5
+cache:
+  directories:
+    - $HOME/.cache/pip
 env:
-  - ANSIBLE_VERSION=2.3.1.0
+#  - ANSIBLE_VERSION=latest
+  - ANSIBLE_VERSION=2.4.1.0
+#  - ANSIBLE_VERSION=2.3.1.0
 cache: bundler
 #sudo: false
 sudo: required
 dist: trusty
+
+branches:
+  only:
+    - master
+
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq python-apt python-pycurl
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq python-apt python-pycurl
+ - sudo apt-get install -qq curl
 install:
   # Install Ansible.
-  - sudo pip install ansible==$ANSIBLE_VERSION
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible; else pip install ansible==$ANSIBLE_VERSION; fi
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible-lint; fi
 
   # Add ansible.cfg to pick up roles path.
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
 script:
-  - sudo ansible --version
-  - export ANSIBLE_ROLES_PATH="../"
-#  - echo localhost > inventory
-  - sudo ansible-playbook -i hosts --syntax-check subversion.yml
-  - sudo ansible-playbook -i hosts --connection=local --sudo -vvvv subversion.yml
+  # Check ansible version
+  - ansible --version
+  #- export ANSIBLE_ROLES_PATH="../"
+
+  # Check the role/playbook's syntax.
+  - ansible-playbook -i hosts --syntax-check subversion.yml
+  
+  # First run
+  # Run the role/playbook with ansible-playbook.  
+  - ansible-playbook -i hosts --connection=local --sudo -vvvv subversion.yml
+
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  email:
+    recipients:
+      - alban.andrieu@nabla.mobi
+#      - other@example.com
+    on_success: [always|never|change] # default: change
+    on_failure: [always|never|change] # default: always
