--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,7 +17,7 @@ subversion_major: '1'
 subversion_minor: '8'
 subversion_revision: '8'
 subversion_version: "{{subversion_major}}.{{subversion_minor}}.{{subversion_revision}}"
-subversion_ubuntu: '{{ subversion_version }}-1ubuntu3.2'
+subversion_ubuntu: '={{ subversion_version }}-1ubuntu3.2'
 
 #user: 'albandri' #please override me
 user: "{{ lookup('env','USER') }}"
