--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,14 +10,14 @@ subversion_previous_codename: trusty
 #subversion_minor: '6'
 #subversion_revision: '17'
 #subversion_version: "{{subversion_major}}.{{subversion_minor}}.{{subversion_revision}}"
-#subversion_ubuntu: '{{ subversion_version }}dfsg-3ubuntu3'
+#subversion_ubuntu: '={{ subversion_version }}dfsg-3ubuntu3'
 
 #Ubuntu 14
-subversion_major: '1'
-subversion_minor: '8'
-subversion_revision: '8'
-subversion_version: "{{subversion_major}}.{{subversion_minor}}.{{subversion_revision}}"
-subversion_ubuntu: '={{ subversion_version }}-1ubuntu3.2'
+#subversion_major: '1'
+#subversion_minor: '8'
+#subversion_revision: '8'
+#subversion_version: "{{subversion_major}}.{{subversion_minor}}.{{subversion_revision}}"
+#subversion_ubuntu: '={{ subversion_version }}-1ubuntu3.2'
 
 #user: 'albandri' #please override me
 user: "{{ lookup('env','USER') }}"
